Update serverless.yml and requirements.txt

--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,13 @@ service: myhealth
 
 frameworkVersion: '2'
 
+plugins:
+  - serverless-python-requirements
+
+custom:
+  pythonRequirements:
+    dockerizePip: true 
+
 provider:
   name: aws
   runtime: python3.8
