Update postman buildspec

--- a/postman-newman-buildspec.yml
+++ b/postman-newman-buildspec.yml
@@ -13,12 +13,12 @@ phases:
       nodejs: 12
     commands:
       - npm install -g newman
-      - npm install -y jq
+      - yum install -y jq
 
   pre_build:
     commands:
-      - aws s3 cp "s3://${SERVERLESS_CICD_S3_BUCKET}/postman-env-files/myHealth.postman_environment.json" ./postman/
-      - aws s3 cp "s3://${SERVERLESS_CICD_S3_BUCKET}/postman-env-files/myHealth.postman_collection.json" ./postman/
+      - aws s3 cp "s3://$SERVERLESS_CICD_S3_BUCKET/postman-env-files/myHealth.postman_environment.json" ./postman/
+      - aws s3 cp "s3://$SERVERLESS_CICD_S3_BUCKET/postman-env-files/myHealth.postman_collection.json" ./postman/
       - cd ./postman
 
   build:
