Update postman buildspec

--- a/postman-newman-buildspec.yml
+++ b/postman-newman-buildspec.yml
@@ -14,8 +14,9 @@ phases:
 
   pre_build:
     commands:
-      - aws s3 cp "s3://${SERVERLESS_CICD_S3_BUCKET}/postman-env-files/myHealth.postman_environment.json" ./postman/
-      - aws s3 cp "s3://${SERVERLESS_CICD_S3_BUCKET}/postman-env-files/myHealth.postman_collection.json" ./postman/
+      - echo S3 Bucket: ${SERVERLESS_CICD_S3_BUCKET}
+      - aws s3 cp "s3://myhealth-cicd-pipeline/postman-env-files/myHealth.postman_environment.json" ./postman/
+      - aws s3 cp "s3://myhealth-cicd-pipeline/postman-env-files/myHealth.postman_collection.json" ./postman/
       - cd ./postman
 
   build:
