--- a/postman-newman-buildspec.yml
+++ b/postman-newman-buildspec.yml
@@ -21,7 +21,7 @@ phases:
   build:
     commands:
       - echo Build started on `date` from dir `pwd`
-      - newman run myHealth.postman_collection.json --environment PetStoreAPIEnvironment.postman_environment.json -r junit
+      - newman run myHealth.postman_collection.json --environment myHealth.postman_environment.json -r junit
 
 reports:
   JUnitReports: # CodeBuild will create a report group called "SurefireReports".
