--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ greenlet==1.1.1
 idna==3.2
 importlib-metadata==4.8.1
 jmespath==0.10.0
+paho-mqtt==1.5.1
 pymongo==3.12.0
 pymssql==2.2.2
 python-dateutil==2.8.2
