--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,22 @@ boto3==1.18.35
 botocore==1.21.35
 certifi==2021.5.30
 charset-normalizer==2.0.4
+cycler==0.10.0
 dnspython==1.16.0
 greenlet==1.1.1
 idna==3.2
 importlib-metadata==4.8.1
 jmespath==0.10.0
+kiwisolver==1.3.2
+neo4j==4.3.5
 paho-mqtt==1.5.1
+Pillow==8.3.2
 pymongo==3.12.0
 pymssql==2.2.2
+pyparsing==2.4.7
 python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
 s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.23
